--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://database:3306/TodoListDatabase
+spring.datasource.url = jdbc:mysql://database:3306/todoListDatabase
 spring.datasource.username = user
 spring.datasource.password = password
 spring.jpa.show-sql = true
